--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -727,7 +727,7 @@
                                                     {{(performance.totalValue/1000000) | number:'1.1-2'}}m
                                                 </td>
 
-                                                <td *ngIf="performance.autoCalculation == false">
+                                                <td class="col-md-1" *ngIf="performance.autoCalculation == false">
                                                     <input type="text" class="form-control" name="multiple" [(ngModel)]="performance.multiple" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="performance.autoCalculation" #multiple="ngModel"/>
                                                     <div [hidden]="multiple.valid || multiple.pristine" class="alert alert-danger">
                                                         Only positive number could be entered
@@ -741,14 +741,14 @@
                                                     <input type="checkbox" [(ngModel)]="performance.autoCalculation" (ngModelChange)="autoCalculationTotalAndMultiple(performance)">
                                                 </td>
 
-                                                <td>
+                                                <td class="col-md-1">
                                                     <input type="text" class="form-control" name="grossIrr" [(ngModel)]="performance.grossIrr" placeholder="-" pattern="[-]?[0-9]*\.?[0-9]+" #grossIrr="ngModel"/>
                                                     <div [hidden]="grossIrr.valid || grossIrr.pristine" class="alert alert-danger">
                                                         Only number could be entered
                                                     </div>
                                                 </td>
 
-                                                <td>
+                                                <td class="col-md-1">
                                                     <input type="text" class="form-control" name="netIrr" [(ngModel)]="performance.netIrr" placeholder="-" pattern="[-]?[0-9]*\.?[0-9]+" #netIrr="ngModel"/>
                                                     <div [hidden]="netIrr.valid || netIrr.pristine" class="alert alert-danger">
                                                         Only number could be entered
