My new message 3

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -1021,7 +1021,7 @@
                                                     {{(cf.grossCF/1000000) | number:'1.1-2'}}m
                                                 </td>
 
-                                                <td>
+                                                <td class="col-md-1">
                                                     <input type="checkbox" [(ngModel)]="cf.autoCalculation" (ngModelChange)="autoCalculationGrossCF(cf)">
                                                 </td>
 
