--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -990,28 +990,28 @@
                                                     <!--</div>-->
                                                 </td>
 
-                                                <td class="col-md-2">
+                                                <td>
                                                     <input type="text" class="form-control" name="invested" [(ngModel)]="cf.invested" (ngModelChange)="autoCalculationGrossCF(cf)" placeholder="-" pattern="[-][0-9]*\.?[0-9]+" #invested="ngModel"/>
                                                     <div [hidden]="invested.valid || invested.pristine" class="alert alert-danger">
                                                         Only negative number could be entered
                                                     </div>
                                                 </td>
 
-                                                <td class="col-md-2">
+                                                <td>
                                                     <input type="text" class="form-control" name="realized" [(ngModel)]="cf.realized" (ngModelChange)="autoCalculationGrossCF(cf)" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #realized="ngModel"/>
                                                     <div [hidden]="realized.valid || realized.pristine" class="alert alert-danger">
                                                         Only positive number could be entered
                                                     </div>
                                                 </td>
 
-                                                <td class="col-md-2">
+                                                <td>
                                                     <input type="text" class="form-control" name="unrealized" [(ngModel)]="cf.unrealized" (ngModelChange)="autoCalculationGrossCF(cf)" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #unrealized="ngModel"/>
                                                     <div [hidden]="unrealized.valid || unrealized.pristine" class="alert alert-danger">
                                                         Only positive number could be entered
                                                     </div>
                                                 </td>
 
-                                                <td class="col-md-2" *ngIf="cf.autoCalculation == false">
+                                                <td *ngIf="cf.autoCalculation == false">
                                                     <input type="text" class="form-control" name="grossCF" [(ngModel)]="cf.grossCF" placeholder="-" pattern="[-]?[0-9]*\.?[0-9]+" [disabled]="cf.autoCalculation" #grossCF="ngModel"/>
                                                     <div [hidden]="grossCF.valid || grossCF.pristine" class="alert alert-danger">
                                                         Only number could be entered
