--- a/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
@@ -75,6 +75,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+
+                </div>
                 <!--<div class="row">-->
                     <!--<div class="col-md-12">-->
                         <!--<div class="col-md-6">-->
