My new message 3

--- a/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
@@ -76,7 +76,9 @@
                     </div>
                 </div>
                 <div class="row">
-
+                    <td class="col-md-1">
+                        <input type="checkbox" [(ngModel)]="performance.autoCalculation" (ngModelChange)="autoCalculationTotalAndMultiple(performance)">
+                    </td>
                 </div>
                 <!--<div class="row">-->
                     <!--<div class="col-md-12">-->
