--- a/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="row">
                     <td class="col-md-1">
-                        <input type="checkbox" [(ngModel)]="searchParams.onlyMyOwn">
+                        <!--<input type="checkbox" [(ngModel)]="searchParams.onlyMyOwn">-->
                     </td>
                 </div>
                 <!--<div class="row">-->
