--- a/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
@@ -76,8 +76,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <td class="col-md-1">
-                        <input type="checkbox" [(ngModel)]="searchParams.onlyMyOwn">
+                    <td class="col-md-3">
+                        <input type="checkbox" [(ngModel)]="searchParams.onlyMyOwn">Search only in my memos
                     </td>
                 </div>
                 <!--<div class="row">-->
