- intermediate commit: implemented, testing in progress

--- a/nicnbk-ui-angular2/src/app/reporting/view/generated.reports.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/generated.reports.nb.reporting.component.html
@@ -80,6 +80,20 @@
                     </td>
                 </tr>
                 <tr>
+                    <td>2 - ОПиУ</td>
+                    <td>
+                        <button class="btn btn-xs btn-primary"
+                                [routerLink]="['/reporting/NBReporting/consolidatedKZTForm2/', reportId]">REPORT</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>3 - ОПСД</td>
+                    <td>
+                        <button class="btn btn-xs btn-primary"
+                                [routerLink]="['/reporting/NBReporting/consolidatedKZTForm3/', reportId]">REPORT</button>
+                    </td>
+                </tr>
+                <tr>
                     <td>7 - РФИ</td>
                     <td>
                         <button class="btn btn-xs btn-primary"
@@ -112,6 +126,20 @@
                     <td>
                         <button class="btn btn-xs btn-primary"
                                 [routerLink]="['/reporting/NBReporting/consolidatedKZTForm14/', reportId]">REPORT</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>19 - РДХФИ</td>
+                    <td>
+                        <button class="btn btn-xs btn-primary"
+                                [routerLink]="['/reporting/NBReporting/consolidatedKZTForm19/', reportId]">REPORT</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>22 - РПДХ</td>
+                    <td>
+                        <button class="btn btn-xs btn-primary"
+                                [routerLink]="['/reporting/NBReporting/consolidatedKZTForm22/', reportId]">REPORT</button>
                     </td>
                 </tr>
 
