--- a/nicnbk-ui-angular2/src/app/reporting/view/singularity.general.ledger.balance.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/singularity.general.ledger.balance.nb.reporting.component.html
@@ -35,6 +35,7 @@
                 <td>GL Account</td>
                 <td>Financial Statement Category Description</td>
                 <td>Chart of Accounts Long Description</td>
+                <td>Short name</td>
                 <td>GL Account Balance</td>
                 <td>Seg Val CCY</td>
                 <td>Fund CCY</td>
@@ -46,6 +47,7 @@
                 <td>{{record.glaccount}}</td>
                 <td>{{record.financialStatementCategoryDescription}}</td>
                 <td>{{record.chartAccountsLongDescription}}</td>
+                <td>{{record.shortName}}</td>
                 <td>{{record.glaccountBalance != null ? (record.glaccountBalance | number:'1.2-2'): ''}}</td>
                 <td>{{record.segValCCY}}</td>
                 <td>{{record.fundCCY}}</td>
