--- a/nicnbk-ui-angular2/src/app/reporting/view/consolidated.balance.kzt.form.1.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/consolidated.balance.kzt.form.1.nb.reporting.component.html
@@ -59,8 +59,8 @@
                 <td>{{record.accountNumber == null ? record.lineNumber : ''}}</td>
                 <!--<td>{{record.lineNumber}}</td>-->
                 <td>{{record.lineNumber != null && record.lineNumber == 16 ? record.otherEntityName : ''}}</td>
-                <td>{{record.currentAccountBalance | number:'1.2-2'}}</td>
-                <td>{{record.previousAccountBalance | number:'1.2-2'}}</td>
+                <td>{{record.currentAccountBalance != null && record.currentAccountBalance != 0 ? (record.currentAccountBalance | number:'1.2-2') : ''}}</td>
+                <td>{{record.previousAccountBalance != null && record.previousAccountBalance != 0 ? (record.previousAccountBalance | number:'1.2-2') : ''}}</td>
             </tr>
 
         </table>
