My new message 3

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -96,7 +96,8 @@
                                         </div>
                                         <div class="col-md-4">
                                             <input type="text" class="form-control" placeholder="Enter fund name..."
-                                                   name="fundName" [(ngModel)]="fund.fundName"/>
+                                                   name="fundName" [(ngModel)]="fund.fundName" required #name="ngModel"/>
+                                            <div [hidden]="name.valid || name.pristine" class="alert alert-danger">Name is required</div>
                                         </div>
                                         <div class="col-md-1">
                                             <label><b>Status</b></label>
