My new message 3

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -1070,7 +1070,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="portfolioInfo" class="tab-pane fade in active">
+                    <div id="portfolioInfo" class="tab-pane fade">
                         <div style="position: relative;">
                             <div [ngBusy]="busy">
                                 <br>
