My new message 3

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -1091,62 +1091,39 @@
                                                 <th>Type of investment</th>
                                                 <th>Control</th>
                                                 <th>Deal source</th>
+                                                <th>Currency</th>
                                             </tr>
                                             <tr *ngFor="let performance of fund.companyPerformanceIdd">
                                                 <td style="font-size: small">
                                                     {{performance.companyName}}
-                                                    <!--<input type="text" class="form-control" name="companyName" [(ngModel)]="performance.companyName" placeholder="-" pattern="[A-Za-z0-9 ()]{1,50}" [disabled]="true" #companyName="ngModel"/>-->
-                                                    <!--<div [hidden]="companyName.valid || companyName.pristine" class="alert alert-danger">-->
-                                                    <!--Name must contain 1-50 characters A-Z, a-z, 0-9-->
-                                                    <!--</div>-->
                                                 </td>
 
                                                 <td style="font-size: small">
-                                                    {{(performance.invested/1000000) | number:'1.1-2'}}
-                                                    <!--<input type="text" class="form-control" name="invested" [(ngModel)]="performance.invested" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="true" #invested="ngModel"/>-->
-                                                    <!--<div [hidden]="invested.valid || invested.pristine" class="alert alert-danger">-->
-                                                    <!--Only positive number could be entered-->
-                                                    <!--</div>-->
+                                                    {{performance.companyName}}
                                                 </td>
 
                                                 <td style="font-size: small">
-                                                    {{(performance.realized/1000000) | number:'1.1-2'}}
-                                                    <!--<input type="text" class="form-control" name="realized" [(ngModel)]="performance.realized" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="true" #realized="ngModel"/>-->
-                                                    <!--<div [hidden]="realized.valid || realized.pristine" class="alert alert-danger">-->
-                                                    <!--Only positive number could be entered-->
-                                                    <!--</div>-->
+                                                    {{performance.companyName}}
                                                 </td>
 
                                                 <td style="font-size: small">
-                                                    {{(performance.unrealized/1000000) | number:'1.1-2'}}
-                                                    <!--<input type="text" class="form-control" name="unrealized" [(ngModel)]="performance.unrealized" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="true" #unrealized="ngModel"/>-->
-                                                    <!--<div [hidden]="unrealized.valid || unrealized.pristine" class="alert alert-danger">-->
-                                                    <!--Only positive number could be entered-->
-                                                    <!--</div>-->
+                                                    {{performance.companyName}}
                                                 </td>
 
                                                 <td style="font-size: small">
-                                                    {{(performance.totalValue/1000000) | number:'1.1-2'}}
-                                                    <!--<input type="text" class="form-control" name="totalValue" [(ngModel)]="performance.totalValue" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="true" #totalValue="ngModel"/>-->
-                                                    <!--<div [hidden]="totalValue.valid || totalValue.pristine" class="alert alert-danger">-->
-                                                    <!--Only positive number could be entered-->
-                                                    <!--</div>-->
+                                                    {{performance.companyName}}
                                                 </td>
 
                                                 <td style="font-size: small">
-                                                    {{performance.multiple | number:'1.1-1'}}x
-                                                    <!--<input type="text" class="form-control" name="multiple" [(ngModel)]="performance.multiple" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="true" #multiple="ngModel"/>-->
-                                                    <!--<div [hidden]="multiple.valid || multiple.pristine" class="alert alert-danger">-->
-                                                    <!--Only positive number could be entered-->
-                                                    <!--</div>-->
+                                                    {{performance.companyName}}
                                                 </td>
 
                                                 <td style="font-size: small">
-                                                    {{performance.grossIrr | number:'1.0-2'}}%
-                                                    <!--<input type="text" class="form-control" name="grossIrr" [(ngModel)]="performance.grossIrr" placeholder="-" pattern="[-]?[0-9]*\.?[0-9]+" [disabled]="true" #grossIrr="ngModel"/>-->
-                                                    <!--<div [hidden]="grossIrr.valid || grossIrr.pristine" class="alert alert-danger">-->
-                                                    <!--Only number could be entered-->
-                                                    <!--</div>-->
+                                                    {{performance.companyName}}
+                                                </td>
+
+                                                <td style="font-size: small">
+                                                    {{performance.companyName}}
                                                 </td>
                                             </tr>
                                         </table>
