My new message 3

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -1112,31 +1112,31 @@
                                                 </td>
 
                                                 <td style="font-size: small">
-                                                    {{performance.companyName}}
+                                                    {{performance.companyDescription}}
                                                 </td>
 
                                                 <td style="font-size: small">
-                                                    {{performance.companyName}}
+                                                    {{performance.industry}}
                                                 </td>
 
                                                 <td style="font-size: small">
-                                                    {{performance.companyName}}
+                                                    {{performance.country}}
                                                 </td>
 
                                                 <td style="font-size: small">
-                                                    {{performance.companyName}}
+                                                    {{performance.typeOfInvestment}}
                                                 </td>
 
                                                 <td style="font-size: small">
-                                                    {{performance.companyName}}
+                                                    {{performance.control}}
                                                 </td>
 
                                                 <td style="font-size: small">
-                                                    {{performance.companyName}}
+                                                    {{performance.dealSource}}
                                                 </td>
 
                                                 <td style="font-size: small">
-                                                    {{performance.companyName}}
+                                                    {{performance.currency}}
                                                 </td>
                                             </tr>
                                         </table>
